Fixed nav bar left and right alignment

--- a/styleNassets/weewoo.css
+++ b/styleNassets/weewoo.css
@@ -19,15 +19,25 @@ body {
 }
 
 
-
-ul {
+nav {
     list-style-type: none;
     top: 0;
     width: 100%;
     position: fixed;
     margin: 0;
+    padding: 0;
     overflow: hidden;
     background-color: #1f060671;
+
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    padding-left: 300px;
+    padding-right: 200px;
+    background-color: #1f060671;
+    text-align: center;
 }
 
 
@@ -39,6 +49,8 @@ ul {
 #left {
     float: left;
 }
+
+
 
 ul li a {
     display: block;
